@@ -1,7 +1,7 @@
 /*
  * ASAP.ppjava - Java version of ASAP
  *
- * Copyright (C) 2007-2009  Piotr Fusik
+ * Copyright (C) 2007-2010  Piotr Fusik
  *
  * This file is part of ASAP (Another Slight Atari Player),
  * see http://asap.sourceforge.net
@@ -149,6 +149,33 @@ public final class ASAP
 	    The first method you call on the new object must be <code>load</code>. */
 	public ASAP()
 	{
+	}
+
+	/** Reads bytes from the stream into the byte array
+	    until end of stream or array is full.
+	    @param is source stream
+	    @param b output array
+	    @return number of bytes read */
+	public static int readAndClose(InputStream is, byte[] b)
+		throws IOException
+	{
+		int got = 0;
+		int need = b.length;
+		try
+		{
+			while (need > 0) {
+				int i = is.read(b, got, need);
+				if (i <= 0)
+					break;
+				got += i;
+				need -= i;
+			}
+		}
+		finally
+		{
+			is.close();
+		}
+		return got;
 	}
 
 	/** Checks whether the extension of the passed filename is known to ASAP.
